Bug 17332 - Retail: Safari: PC: search helper text is bad aligned

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -315,8 +315,8 @@ footer {
 }
 #header .main .search input {
     border: none;
+    height: 25px;
     width: 100%;
-    line-height: 25px;
 }
 #header .checkout .search {
     display: none;
